<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

          <Button
              android:id="@+id/button_signup"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="100dp"
              android:layout_marginTop="44dp"
              android:text="@string/sign_up"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/password"
              app:layout_constraintVertical_bias="0.0" />

          <Button
              android:id="@+id/button_login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="100dp"
              android:text="@string/login"
              app:layout_constraintBottom_toBottomOf="@+id/button_signup"
              app:layout_constraintEnd_toEndOf="parent" />

          <EditText
              android:id="@+id/password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="22dp"
              android:autofillHints=""
              android:ems="10"
              android:hint="@string/password"
              android:inputType="textPassword"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/login" />

          <EditText
              android:id="@+id/login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="264dp"
              android:autofillHints=""
              android:ems="10"
              android:hint="@string/username"
              android:inputType="textEmailAddress"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.497"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
</layout>